make page responsive in process fixing search dropdown in process added add expense button on small screen

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     position: relative;
     margin-top: 10px;
     margin-bottom: 10px;
+    font-weight: bold;
+    text-align: center;
+    font-family: fantasy;
+    font-size: 330%;
 }
 
 .container {
@@ -11,11 +15,11 @@
 }
 
 .page-header {
-    height: 8vh;
+    #height: 8vh;
 }
 
 .btnContainer {
-    height: 5vh;
+    height: 7%;
 }
 
 .bottomContainer {
@@ -29,6 +33,11 @@
     right: 0;
     font-family: arial, helvetica, sans-serif;
     width: 27%;
+    top: 3%;
+}
+
+.expense-add-form h4 {
+    font-weight: bold;
 }
 
 .bottomExpenseDiv {
@@ -153,7 +162,8 @@ td {
 
 .addBtnContainer,
 .deleteBtnContainer,
-.updateBtnContainer {
+.updateBtnContainer,
+.searchBtnContainer {
     display: inline-block;
     position: relative;
     top: 50%;
@@ -162,15 +172,18 @@ td {
 }
 
 .deleteBtn,
-.updateBtn {
+.updateBtn,
+.searchBtn {
     border-radius: 5px;
     padding: 5px;
-    background-color: darkseagreen;
+    background-color: darkolivegreen;
+    color: white;
 }
 
 .searchBtn {
-    background-color: darkseagreen;
-    padding: 5px;
+    #background-color: darkolivegreen;
+    #color: white;
+    #padding: 5px;
 }
 
 .addBtnContainer {
@@ -181,11 +194,8 @@ td {
 }
 
 .searchBtnContainer {
-    display: inline-block;
-    border-radius: 5px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    background-color: darkseagreen;
+    #display: inline-block;
+    #border-radius: 5px;
 }
 
 .updateForm {
@@ -261,17 +271,31 @@ td {
         width: 100%;
         padding-right: 15px;
         padding-left: 15px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
+        #display: flex;
+        #flex-direction: column;
+        #align-items: center;
+        #justify-content: center;
+        height: 100%;
     }
     .page-header {
         width: 100%;
-        height: 10%;
+        #height: 7.5%;
+        border: 0;
+        padding-top: 10px;
+        border-bottom: 1px solid #eee
     }
-
+    .btnContainer {
+        height: 5%;
+        font-size: 150%;
+    }
+    .addBtnContainer {
+        display: inline-block;
+    }
+    .deleteBtn,
+    .updateBtn,
+    .searchBtn {
+        font-size: 107%;
+    }
     .expense-add-form {
         width: 100%;
         padding-left: 15px;
@@ -279,6 +303,7 @@ td {
         position: relative;
         height: 38%;
         top: 10px;
+        display: none;
     }
 
     .form-element {
@@ -297,22 +322,22 @@ td {
     }
 
     .bottomExpenseDiv {
-        height: 52%;
+        height: 87.5%;
         text-align: center;
         width: 100%;
     }
 
     .bottomTable {
         position: relative;
-        top: 240px;
-        font-size: 1.5vh;
+        #top: 240px;
+        font-size: 138%;
         width: 100%;
     }
     .bottomTable thead {
         border-bottom: 1px solid #555555;
     }
     .tableElement {
-        width: 33.33%;
+        #width: 33.33%;
         display: table-cell;
         text-align: center;
     }
